# chat_with_doc_agui

./: .gitignore  .talismanrc  ARCHITECTURE.md  README.md  package-lock.json  package.json
backend/: ARCHITECTURE.md  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: analytics.py  chat.py  documents.py
backend/app/models/: agui_events.py  document.py
backend/app/services/: agui_service.py  document_service.py  llm_service.py
backend/app/utils/: search.py
backend/docs/: 01-introduction-to-carnatic-music.txt  02-carnatic-music-trinity.txt  03-ragas-melodic-framework.txt  04-talas-rhythmic-cycles.txt  05-carnatic-music-instruments.txt  06-concert-structure-format.txt  07-improvisation-manodharma.txt  08-learning-tradition-guru-shishya.txt  09-famous-carnatic-musicians.txt  10-carnatic-music-modern-era.txt  sample.txt
frontend/: README.md
frontend/src/: App.jsx
frontend/src/components/: ChatMessage.jsx  DocumentCard.jsx
frontend/src/constants/: index.js
frontend/src/hooks/: useAGUIStream.js
frontend/src/pages/: Analytics.jsx  Chatbot.jsx  DocumentList.jsx  DocumentView.jsx  Settings.jsx
frontend/src/services/: aguiClient.js  api.js
frontend/src/utils/: storage.js
