[project]
name = "doc-chatbot-backend"
version = "0.1.0"
description = "FastAPI backend for document chatbot with AG-UI protocol"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors (PEP 8 style)
    "W",   # pycodestyle warnings
    "F",   # Pyflakes (logical errors)
    "I",   # isort (import sorting)
    "N",   # pep8-naming (naming conventions)
    "UP",  # pyupgrade (modern Python syntax)
    "B",   # flake8-bugbear (common bugs)
    "C4",  # flake8-comprehensions (better comprehensions)
    "SIM", # flake8-simplify (code simplification)
    "S",   # flake8-bandit (security)
    "A",   # flake8-builtins (builtin shadowing)
]
ignore = []
